initial server.js test running, integrating .travis.yml file

--- a/package.json
+++ b/package.json
@@ -7,12 +7,24 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "mocha --exit",
+    "start": "nodemon server.js"
   },
   "author": "fulgonim",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mongo": "^0.1.0",
+    "mongoose": "^5.0.12",
+    "morgan": "^1.9.0",
+    "npm": "^5.8.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "mocha": "^5.0.5"
   }
 }
