--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "fulgonim",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "mongo": "^0.1.0",
     "mongoose": "^5.0.12",
     "morgan": "^1.9.0",
+    "nodemon": "^1.17.3",
     "npm": "^5.8.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
