--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "fulgonim",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "mongo": "^0.1.0",
     "mongoose": "^5.0.12",
