--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongo": "^0.1.0",
     "mongoose": "^5.0.12",
     "morgan": "^1.9.0",
@@ -25,7 +26,8 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "session": "^0.1.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
